--- a/src/components/stories/StorySingle.scss
+++ b/src/components/stories/StorySingle.scss
@@ -606,6 +606,9 @@
 .story-module__techstack-inner {
   max-width: fvw(960);
   margin: 0 auto;
+  text-align: center;
+
+  .tech-stack { justify-content: center; }
 }
 
 .story-module__techstack-heading {
